<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RajaKazmiAssignment1</string>

    <string name="title" tools:ignore="DuplicateDefinition">TempConvert</string>
    <string name="Labele1">Convert Now</string>
    <string name="Lable2">Converted Temperature </string>
    <string name="inputPlacehoder">Enter Temp </string>
    <string name="C">°C </string>
    <string name="F">°F </string>


</resources>