<?xml version="1.0" encoding="utf-8"?>

<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/black"

    android:layout_width="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout 
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_boxedEdges="all"
    tools:context=".MainActivity">

    <!-- Header Linear Layout having Title and time in it -->
    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:layout_marginStart="10dp"
            android:text="@string/title"
            android:textColor="@color/blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time"
            android:paddingTop="4dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"


            android:textSize="12sp" />
    </LinearLayout>

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="4dp"
        tools:layout_editor_absoluteX="5dp">

        <!-- Convert Now Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
           android:padding="6dp"
            android:background="@drawable/rounded_background_gry"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:baselineAligned="false"
                android:text="@string/Labele1"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:hint="@string/inputPlacehoder"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="12sp"
                    android:background="@drawable/rounded_background"
                    android:textColor="@color/gry"
                    />

                <Button
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_button"
                    android:padding="0dp"
                    android:text="@string/C"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    tools:ignore="SmallSp" />
                <Button
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:padding="0dp"
                    android:text="@string/F"
                    android:textSize="12sp"
                    android:gravity="center"

                    android:textColor="@color/blue"
                    android:background="@drawable/rounded_button"
                    tools:ignore="smallSp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Converted Temperature Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/rounded_background_gry"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/Lable2"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/rounded_button"

                android:textColor="@color/black"

                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>
